# GNNFairViz

./: .gitignore  =5.6.0  README.md  datasets.py  demo_nba_gcn.ipynb  demo_nba_gcn.py  holoviews_clone_full.yml  models.py  pyproject.toml  test.ipynb  test_holoviz.ipynb  test_plotly.ipynb  util.py  xinwu.code-workspace
evaluation/: datasets.py  models.py  node_classification.py  util.py
evaluation/cases/gat/: demo_bail_gat.ipynb  demo_bail_gat.pth  demo_credit_gat.ipynb  demo_credit_gat.pth  demo_facebook_gat.ipynb  demo_facebook_gat.pth  demo_german_gat.ipynb  demo_german_gat.pth  demo_nba_gat.ipynb  demo_nba_gat.pth  demo_pokec_n_gat.ipynb  demo_pokec_n_gat.pth  demo_pokec_z_gat.ipynb
evaluation/cases/gcn/: demo_bail_gcn.ipynb  demo_bail_gcn.pth  demo_credit_gcn.ipynb  demo_credit_gcn.pth  demo_facebook_gcn.ipynb  demo_german_gcn.ipynb  demo_german_gcn.pth  (+6 more)
evaluation/models/: gat.py  gcn.py  gin.py  sage.py
gnnfairviz/: RangesetCategorical.py  community.py  css.py  draw.py  eug.py  individual_bias.py  util.py
gnnfairviz/metrics/: node_classification.py
pyemug/: RangesetCategorical.py  draw.py  emug.py  util.py
pyemug/explainers/: configs.py  explain_unfairness.py  explain_unfairness_global.py  explain_unfairness_local.py  test.ipynb  util_explainers.py
pyeug/: RangesetCategorical.py  community.py  community_slow.py  css.py  draw.py  eug.py  individual_bias.py  util.py
pyeug/metrics/: approximator.py  node_classification.py  pdd.py
test_pdd/: bail_pdd_train_test.npy  nba_pdd_train_test.npy  pokecn_pdd_train_test.npy  pokecz_pdd_train_test.npy
(+132 files in other folders)
